# haskell-pffp

./: README.md
chapter02/: exercises.hs  test.hs
chapter03/: exercises.hs  print3.hs  utils.hs
chapter06/: chapter-exercises.hs  exercises-eq-instances.hs  exercises-will-they-work.hs
chapter07/: exercises-artful-dodgy.hs  exercises-case-practice.hs  exercises-grab-bag.hs  exercises-guard-duty.hs
chapter09/: chapter-exercises.hs  exercises-bottoms.hs  exercises-enum.hs  exercises-list-comprehensions.hs
chapter10/: chapter-exercises.hs  exercises-database-processing.hs  exercises-scans.hs  exercises-understanding-folds.hs
chapter11/: binary-tree.hs  chapter-exercises.hs  exercises-cardinality.hs  exercises-dog-types.hs  exercises-logic-goats.hs  exercises-programmers.hs  exercises-vehicles.hs  hutton-razor.hs
chapter12/: chapter-exercises.hs
chapter13/hangman/src/: Main.hs
chapter13/hello/: hello.cabal
chapter13/hello/src/: DogsRule.hs  Hello.hs
chapter14/addition/: Addition.hs  addition.cabal
chapter15/: optional-monoid.hs
chapter15/chapter-exercises/app/: Main.hs
chapter15/maybe-another-monoid/: maybe-another-monoid.cabal
chapter15/maybe-another-monoid/app/: Main.hs
chapter16/: compose-fmap.hs  folds.hs  heavy-lifting.hs  possibly.hs  sum.hs
chapter16/chapter-exercises/: chapter-exercises.cabal
chapter16/chapter-exercises/app/: Main.hs
chapter16/instances-of-func/: instances-of-func.cabal
chapter16/instances-of-func/app/: Main.hs
chapter17/: constant-instance.hs  fixer-upper.hs  identity-instance.hs  lookups.hs
chapter17/chapter-exercises/: chapter-exercises.cabal
chapter17/chapter-exercises/app/: Main.hs
chapter17/list-applicative/: list-applicative.cabal
chapter17/variations-on-either/: variations-on-either.cabal
chapter17/ziplist-applicative/: ziplist-applicative.cabal
chapter18/: fmap-join.hs  list-monad.hs
chapter18/either-monad/: either-monad.cabal
chapter19/: function.hs
chapter19/shawty/: shawty.cabal
chapter19/shawty/app/: Main.hs
chapter2/: Learn.hs
chapter4/: exercises.hs
chapter5/: DetermineTheType.hs  exercises.hs
chapter7/: chapter-exercises.hs  exercises-variety-pack.hs
chapter8/: chapter-exercises.hs
chapter9/: exercise-symmetry.hs  exercises-square-cube.hs
(+5 files in other folders)
