cabal-version:      2.4
name:               addition
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Krzysztof Hrynczenko
maintainer:         jeniopy@gmail.com
build-type:         Simple

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Addition
    ghc-options: -Wall

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , hspec
                    , QuickCheck
    hs-source-dirs:   .
    default-language: Haskell2010
