cabal-version:      2.4
name:               shawty
version:            0.1.0.0
synopsis:           URI shortener
description: Please see README.md

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Krzysztof Hrynczenko
maintainer:         jeniopy@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable shawty
    main-is:          Main.hs
    ghc-options:      -Wall -threaded
    default-extensions: OverloadedStrings

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , bytestring
                    , hedis
                    , mtl
                    , network-uri
                    , random
                    , scotty
                    , semigroups
                    , text
                    , transformers

    hs-source-dirs:   app
    default-language: Haskell2010
